Removing the /journal/ piece of the permalink. It's not needed.

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Avalonstar
 author: Bryan Veloso
 
 root: /
-permalink: /journal/:year/:title/
+permalink: /:year/:title/
 
 source: source
 destination: public
