Revert "Removing the /journal/ piece of the permalink. It's not needed.".
This reverts commit 232f50a2356461eb677c4af6d2d68111b61ae3f9.

Conflicts:
	_config.yml
	config.ru

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: Bryan Veloso
 root: /
 
 date_format: "ordinal"
-permalink: /:year/:title/
+permalink: /journal/:year/:title/
 
 source: source
 destination: public
