Description and other metadata.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Avalonstar
 author: Bryan Veloso
+description: "This is Avalonstar, a micro-video network covering everything from deisgn and web development to StarCraft II and eSports."
 
 root: /
 
