Having to get the hang of Jekyll again. This should protect everything.

--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ root: /
 
 date_format: "ordinal"
 permalink: /journal/:year/:title/
+include: ["javascripts", "stylesheets"]
 
 source: source
 destination: public
