--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@
 .gist-cache
 .pygments-cache
 
-public
-source/_stash
-source/stylesheets/screen.css
+_public
+_source/_stash
+_source/stylesheets/screen.css
