--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,15 @@
 language: ruby
 rvm:
-  - 1.9.3
-  - 2.0.0
+- 1.9.3
+- 2.0.0
 script: bundle exec middleman build
 install: bundle install
 notifications:
   email: false
+deploy:
+  provider: heroku
+  api_key:
+    secure: GMs/Qtk6RpSHBX6Bitw3KL4N44mFfVZ2q1JEbc1yAcs3egmPXOmTQrP7nPvgvTXPuhWHk//UL7FXxSsni9ynRhroNcB354GsFuCXo8tg4yS+l2gfqIukqvmtdEQjX2ZwmNOfpFi0mwAbnQV8qgdK3UTqmxzgWqDBnTkuSo9fO0s=
+  app: avalonstar
+  on:
+    repo: bryanveloso/avalonstar
