--- a/data/rpgs.yaml
+++ b/data/rpgs.yaml
@@ -56,3 +56,65 @@ played:
     games:
       - game: Kingdom Hearts
       - game: Kingdom Hearts II
+  - series: Mario RPG Series
+    games:
+      - game: "Super Mario RPG: Legend of the Seven Stars"
+      - game: Paper Mario
+      - game: Paper Mario and the Thousand-Year Door
+      - game: Super Paper Mario
+      - game: "Mario and Luigi: Bowser's Inside Story"
+  - series: Mother Series
+    games:
+      - game: Earthbound (Mother 2)
+      - game: Mother 3
+        platform: Gameboy Advance (Translated ROM)
+  - series: Wild ARMs Series
+    games:
+      - game: Wild ARMs
+      - game: "Wild ARMs: Alter Code F"
+  - series: Legend of Zelda Series
+    games:
+      - game: The Legend of Zelda
+      - game: "The Legend of Zelda: A Link to the Past"
+  - series: Xeno
+    games:
+      - game: Xenogears
+      - game: Xenoblade Chronicles
+  - series: Golden Sun Series
+    games:
+      - game: Golden Sun
+  - series: Diablo
+    games:
+      - game: Diablo
+      - game: Diablo II
+      - game: Diablo III
+  - series: Mistwalker Games
+    games:
+      - game: Lost Odyssey
+      - game: The Last Story
+        platform: Wii
+        comments: "Completed Both NA and Japanese Veresions. First Untranslated Completion."
+  - series: Other Square-Enix Games
+    games:
+      - game: Secret of Mana
+      - game: Secret of Evermore
+      - game: "Bravely Default: Flying Fairy"
+  - series: Uncategorized One-Offs
+    games:
+      - game: Child of Light
+        platform: Wii U
+      - game: Eternal Sonata (Trusty Bell)
+      - game: Fallout
+      - game: .hack//Infection
+      - game: Illusion of Gaia
+      - game: Jade Empire
+      - game: Legend of Legaia
+      - game: "Lufia II: Rise of the Sinistrals"
+      - game: "Lunar: Silver Star Story Complete"
+      - game: "Ni no Kuni: Wrath of the White Witch"
+      - game: Quest 64
+      - game: "The Elder Scrolls IV: Oblivion"
+      - game: The 7th Saga
+      - game: X-Men Legends
+      - game: "X-Men Legends II: Rise of Apocalypse"
+      - game: "Ys IV: The Ark of Naphistim"
