The rest of my "top 10".

--- a/data/rpgs.yaml
+++ b/data/rpgs.yaml
@@ -5,6 +5,19 @@ top:
     nostalgic: true
   - game: Phantasy Star IV
     nostalgic: true
+  - game: The Last Story
+  - game: Final Fantasy Tactics
+  - game: Secret of Mana
+  - game: Tales of Vesperia
+  - game: Lost Odyssey
+  - game: Tales of the Abyss
+  - game: "Super Mario RPG: Legend of the Seven Stars"
+  - game: Final Fantasy VI
+  - game: Final Fantasy VII
+  - game: Kingdom Hearts II
+  - game: Earthbound
+  - game: Xenoblade Chronicles
+  - game: Bravely Default
 
 played:
   - series: Final Fantasy
