--- a/studio/package.json
+++ b/studio/package.json
@@ -21,6 +21,7 @@
     "@sanity/default-login": "^1.149.0",
     "@sanity/desk-tool": "^1.149.3",
     "@sanity/vision": "^1.149.0",
+    "date-fns": "^2.10.0",
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2"
