chore: Add markdown to Sanity.

--- a/studio/package.json
+++ b/studio/package.json
@@ -24,7 +24,8 @@
     "date-fns": "^2.10.0",
     "prop-types": "^15.6",
     "react": "^16.2",
-    "react-dom": "^16.2"
+    "react-dom": "^16.2",
+    "sanity-plugin-markdown": "^1.0.1"
   },
   "devDependencies": {}
 }
