--- a/studio/package.json
+++ b/studio/package.json
@@ -25,6 +25,7 @@
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2",
+    "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
     "sanity-plugin-markdown": "^1.0.1"
   },
   "devDependencies": {}
