--- a/studio/package.json
+++ b/studio/package.json
@@ -17,6 +17,7 @@
     "@sanity/base": "^1.149.3",
     "@sanity/components": "^1.149.3",
     "@sanity/core": "^1.149.2",
+    "@sanity/dashboard": "^1.149.3",
     "@sanity/default-layout": "^1.149.3",
     "@sanity/default-login": "^1.149.0",
     "@sanity/desk-tool": "^1.149.3",
