--- a/studio/package.json
+++ b/studio/package.json
@@ -26,6 +26,7 @@
     "prop-types": "^15.6",
     "react": "^16.2",
     "react-dom": "^16.2",
+    "sanity-plugin-dashboard-widget-document-list": "^0.0.9",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
     "sanity-plugin-markdown": "^1.0.1"
   },
