fix: Add a build command in studio/package.json.

--- a/studio/package.json
+++ b/studio/package.json
@@ -7,7 +7,11 @@
   "author": "Bryan Veloso <bryan@avalonstar.com>",
   "license": "UNLICENSED",
   "scripts": {
-    "start": "sanity start",
+    "dev": "sanity start",
+    "format": "prettier-eslint --write \"**/*.js\" \"!node_modules/**\"",
+    "build": "sanity build",
+    "graphql-deploy": "sanity graphql deploy --playground",
+    "lint": "eslint .",
     "test": "sanity check"
   },
   "keywords": [
