--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@theme-ui/color": "^0.3.1",
     "@theme-ui/match-media": "^0.3.1",
+    "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
