--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
+  "editor.codeActionsOnSave": {
+    "source.fixAll": true
+  },
   "eslint.workingDirectories": [
     { "directory": "./studio", "changeProcessCWD": true },
     { "directory": "./web", "changeProcessCWD": true }
