fix: Spell "gatsby" correctly.

--- a/web/package.json
+++ b/web/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "avalonstar-gasby",
+  "name": "avalonstar-gatsby",
   "private": true,
   "version": "2020.03.01",
   "author": "Bryan Veloso <bryan@avalonstar.com>",
