--- a/web/package.json
+++ b/web/package.json
@@ -26,6 +26,7 @@
     "theme-ui": "^0.3.1"
   },
   "devDependencies": {
+    "@types/theme-ui": "^0.3.0",
     "@typescript-eslint/eslint-plugin": "^2.22.0",
     "@typescript-eslint/parser": "^2.22.0",
     "eslint": "^6.8.0",
