--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "lint": "lerna run lint",
     "postinstall": "lerna bootstrap",
     "test": "echo \"Error: no test specified\" && exit 1"
-  },  
+  },
   "devDependencies": {
     "@sanity/cli": "^1.149.2",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
     "lerna": "^3.20.2"
   }
 }
