--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,8 @@
   "dependencies": {
     "@theme-ui/color": "^0.3.1",
     "@theme-ui/match-media": "^0.3.1",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
     "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
