chore: Shut off implicity any for the time being.

--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -21,7 +21,8 @@
     "noUnusedLocals": false,
     "noUnusedParameters": true,
     "removeComments": false,
-    "preserveConstEnums": true
+    "preserveConstEnums": true,
+    "noImplicitAny": false,
   },
   "include": ["./src/**/*"]
 }
