--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-sanity": "^5.0.6",
     "gatsby-transformer-sharp": "^2.3.13",
+    "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
