--- a/studio/package.json
+++ b/studio/package.json
@@ -25,6 +25,7 @@
     "@sanity/default-layout": "^1.149.3",
     "@sanity/default-login": "^1.149.0",
     "@sanity/desk-tool": "^1.149.3",
+    "@sanity/google-maps-input": "^1.149.0",
     "@sanity/vision": "^1.149.0",
     "date-fns": "^2.10.0",
     "prop-types": "^15.6",
