--- a/studio/package.json
+++ b/studio/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.18.3",
+    "prettier": "2.0.4",
     "prettier-eslint-cli": "^5.0.0"
   }
 }
