--- a/web/package.json
+++ b/web/package.json
@@ -46,7 +46,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.18.3",
-    "prettier": "^1.19.1",
+    "prettier": "2.0.4",
     "prettier-eslint-cli": "^5.0.0",
     "typescript": "^3.8.3"
   },
