--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.5.6",
     "gatsby-plugin-theme-ui": "^0.3.0",
+    "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-plugin-typescript": "^2.2.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.46",
