chore(deps): Add react-icons to /sanity.

--- a/studio/package.json
+++ b/studio/package.json
@@ -31,6 +31,7 @@
     "prop-types": "^15.6",
     "react": "^16.13",
     "react-dom": "^16.2",
+    "react-icons": "^3.10.0",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.10",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
     "sanity-plugin-markdown": "^1.0.1"
