--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-feed": "^2.5.0",
     "gatsby-plugin-manifest": "^2.3.5",
     "gatsby-plugin-mdx": "^1.2.4",
+    "gatsby-plugin-netlify": "^2.3.0",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.2.1",
     "gatsby-plugin-react-svg": "^3.0.0",
