--- a/web/package.json
+++ b/web/package.json
@@ -13,9 +13,11 @@
     "@types/react-helmet": "^5.0.15",
     "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
+    "framer-motion": "^1.10.3",
     "gatsby": "^2.20.25",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-feed": "^2.5.0",
+    "gatsby-plugin-layout": "^1.3.0",
     "gatsby-plugin-manifest": "^2.3.5",
     "gatsby-plugin-mdx": "^1.2.4",
     "gatsby-plugin-netlify": "^2.3.1",
@@ -26,7 +28,6 @@
     "gatsby-plugin-sharp": "^2.5.6",
     "gatsby-plugin-sitemap": "^2.4.1",
     "gatsby-plugin-theme-ui": "^0.3.0",
-    "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-plugin-typescript": "^2.2.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.46",
