--- a/studio/package.json
+++ b/studio/package.json
@@ -28,10 +28,12 @@
     "@sanity/google-maps-input": "^1.149.0",
     "@sanity/vision": "^1.149.0",
     "date-fns": "^2.12.0",
+    "get-youtube-id": "^1.0.1",
     "prop-types": "^15.6",
     "react": "^16.13",
     "react-dom": "^16.2",
     "react-icons": "^3.10.0",
+    "react-youtube": "^7.11.2",
     "sanity-plugin-dashboard-widget-document-list": "^0.0.10",
     "sanity-plugin-dashboard-widget-netlify": "^1.0.1",
     "sanity-plugin-markdown": "^1.0.1"
