--- a/web/package.json
+++ b/web/package.json
@@ -34,12 +34,14 @@
     "gatsby-source-sanity": "^5.0.6",
     "gatsby-transform-portable-text": "^0.0.2",
     "gatsby-transformer-sharp": "^2.4.4",
+    "get-youtube-id": "^1.0.1",
     "lodash": "^4.17.15",
     "numeral": "^2.0.6",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-youtube": "^7.11.2",
     "theme-ui": "^0.3.1"
   },
   "devDependencies": {
