--- a/web/package.json
+++ b/web/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^2.0.0-beta.66",
     "gatsby": "^2.20.25",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-emotion": "^4.3.1",
     "gatsby-plugin-fathom": "^1.2.0",
     "gatsby-plugin-feed": "^2.5.0",
     "gatsby-plugin-layout": "^1.3.0",
