--- a/web/package.json
+++ b/web/package.json
@@ -11,6 +11,7 @@
     "@theme-ui/color": "^0.3.1",
     "@theme-ui/match-media": "^0.3.1",
     "@types/react-helmet": "^5.0.15",
+    "axios": "^0.19.2",
     "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.0.0-beta.66",
@@ -31,7 +32,6 @@
     "gatsby-plugin-sitemap": "^2.4.1",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-typescript": "^2.2.0",
-    "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-sanity": "^5.0.6",
     "gatsby-transform-portable-text": "^0.0.2",
