--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "@theme-ui/match-media": "^0.3.1",
     "@types/react-helmet": "^5.0.15",
     "axios": "^0.19.2",
+    "axios-hooks": "^1.10.0",
     "date-fns": "^2.10.0",
     "dotenv": "^8.2.0",
     "framer-motion": "^2.0.0-beta.66",
