--- a/web/package.json
+++ b/web/package.json
@@ -30,11 +30,12 @@
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.5.0",
     "gatsby-plugin-sharp": "^2.5.6",
-    "gatsby-plugin-sitemap": "^2.4.1",
+    "gatsby-plugin-sitemap": "^2.4.3",
     "gatsby-plugin-theme-ui": "^0.3.0",
     "gatsby-plugin-typescript": "^2.2.0",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-source-sanity": "^5.0.6",
+    "gatsby-theme-style-guide": "^0.3.1",
     "gatsby-transform-portable-text": "^0.0.2",
     "gatsby-transformer-sharp": "^2.4.4",
     "get-youtube-id": "^1.0.1",
@@ -44,6 +45,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-pluralize": "^1.6.3",
     "react-youtube": "^7.11.2",
     "theme-ui": "^0.3.1"
   },
