--- a/web/package.json
+++ b/web/package.json
@@ -50,6 +50,7 @@
     "theme-ui": "^0.3.1"
   },
   "devDependencies": {
+    "@types/numeral": "^0.0.28",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.7",
     "@types/theme-ui": "^0.3.2",
