--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "version": "2020.03.01",
   "author": "Bryan Veloso <bryan@avalonstar.com>",
   "dependencies": {
+    "@emotion/core": "^10.0.28",
     "@mdx-js/mdx": "^1.6.1",
     "@mdx-js/react": "^1.6.1",
     "@sanity/block-content-to-react": "^2.0.7",
