Build Sanity into the public directory.

--- a/studio/package.json
+++ b/studio/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "sanity start",
     "format": "prettier-eslint --write \"**/*.js\" \"!node_modules/**\"",
-    "build": "sanity build",
+    "build": "sanity build public -y",
     "graphql-deploy": "sanity graphql deploy --playground --force",
     "lint": "eslint .",
     "test": "sanity check"
